# metmux

./: .gitattributes  .gitignore  MANIFEST.in  README.fr.md  README.md  README.pypi.md  metmux.py  pyproject.toml
.github/workflows/: tests.yml
integrations/: README.fr.md  README.md
integrations/linux/: Edit metadata  metmux.desktop
integrations/macos/: metmux_quickaction.sh
integrations/macos/Edit metadata.workflow/Contents/: Info.plist  document.wflow
integrations/windows/: metmux.bat  metmux.reg  metmux_uninstall.reg
tests/: metmux_test.py
